package at.spengergasse.sj21224bhifaslantanprojectdoctor.domain;

public enum Gender {
    MALE,
    FEMALE,
    DIV
}
