package at.spengergasse.sj21224bhifaslantanprojectdoctor.domain;

public enum Grade {
    B,
    M,
    MAG,
    DIPL,
    DR
}
