package at.spengergasse.sj21224bhifaslantanprojectdoctor.domain;

public enum Position {

    MEDICAL_DIRECTOR,
    HEAD_OF_DEPARTMENT,
    ATTENDING_PHYSICIAN,
    FELLOW,
    CHIEF_RESIDENT,
    SENIOR_RESIDENT,
    JUNIOR_RESIDENT,
    INTERN,
    MEDICAL_STUDENT,
    PREMED_STUDENT,


}
