package at.spengergasse.sj21224bhifaslantanprojectdoctor.domain;

public enum Subject {
    ALLGEMEINMEDIZIN,
    ANAESTHESIOLOGIE_UND_INTENSIVMEDIZIN,

    }
