package at.spengergasse.sj21224bhifaslantanprojectdoctor.domain;

public enum SubjectGrade {
    ARTS,
    ENGINEERING,
    SCIENCE,
    MED_VET,
    MED_DENT,
    RER_NAT,
    PHIL,
    IUR,
    A_I_S,
    PHD,
    NAT_TECHN,
    SCIENT_MED,
    MONT,
    THEOL
}
